--- a/K8055Test/K8055Test.csproj
+++ b/K8055Test/K8055Test.csproj
@@ -34,7 +34,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="K8055D">
+    <Reference Include="K8055D, Version=1.0.0.0, Culture=neutral, processorArchitecture=AMD64">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\K8055D.dll</HintPath>
     </Reference>
     <Reference Include="System" />
